// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting country code and calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  primaryPhoneNumber: '123456789',
  primaryPhoneCountryCode: 'US',
  primaryPhoneCallingCode: '+33',
  additionalPhones: []
} for phones field "phonenumber" - Provided country code and calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting country code and calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  additionalPhones: [ { callingCode: '+33', countryCode: 'US', number: '123456789' } ]
} for phones field "phonenumber" - Provided country code and calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  primaryPhoneNumber: '+33123456789',
  primaryPhoneCallingCode: '+1',
  additionalPhones: []
} for phones field "phonenumber" - Provided and inferred calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { additionalPhones: [ { callingCode: '+1', number: '+33123456789' } ] } for phones field "phonenumber" - Provided and inferred calling code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  primaryPhoneNumber: '+33123456789',
  primaryPhoneCountryCode: 'US',
  additionalPhones: []
} for phones field "phonenumber" - Provided and inferred country code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with conflicting phone number country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { additionalPhones: [ { countryCode: 'US', number: '+33123456789' } ] } for phones field "phonenumber" - Provided and inferred country code are conflicting",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid calling code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  primaryPhoneNumber: '123456789',
  primaryPhoneCountryCode: 'FR',
  primaryPhoneCallingCode: '+999',
  additionalPhones: []
} for phones field "phonenumber" - Invalid calling code +999",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid calling code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  additionalPhones: [ { callingCode: '+999', countryCode: 'FR', number: '123456789' } ]
} for phones field "phonenumber" - Invalid calling code +999",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid country code 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  primaryPhoneNumber: '123456789',
  primaryPhoneCountryCode: 'XX',
  primaryPhoneCallingCode: '+33',
  additionalPhones: []
} for phones field "phonenumber" - Invalid country code XX",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid country code 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value {
  additionalPhones: [ { callingCode: '+33', countryCode: 'XX', number: '123456789' } ]
} for phones field "phonenumber" - Invalid country code XX",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid phone number format 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { primaryPhoneNumber: 'not-a-number', additionalPhones: [] } for phones field "phonenumber" - Provided phone number is invalid not-a-number",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field with invalid phone number format 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { additionalPhones: [ { number: 'not-a-number' } ] } for phones field "phonenumber" - Provided phone number is invalid not-a-number",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field without country or calling code at all 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { primaryPhoneNumber: '123456789', additionalPhones: [] } for phones field "phonenumber" - Provided phone number is invalid 123456789",
    "name": "UserInputError",
  },
]
`;

exports[`failing create phone field metadata test suite it should fail to create primary phone field without country or calling code at all 2`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "subCode": "INVALID_PHONES",
      "userFriendlyMessage": "An error occurred.",
    },
    "message": "Invalid value { additionalPhones: [ { number: '123456789' } ] } for phones field "phonenumber" - Provided phone number is invalid 123456789",
    "name": "UserInputError",
  },
]
`;
